--- a/views/mixins/form-helpers.jade
+++ b/views/mixins/form-helpers.jade
@@ -22,6 +22,8 @@ mixin date(field, value)
 mixin datetime(field, value)
   input.span2(type="datetime", id=field, name=field, value=value)
 
+mixin date(field, value)
+  input.span2(type="file", id=field, name=field, value=value)
     
 mixin errorMessage(model, field)
   !{errorFor(model, field)}
