created base function and psd processing

--- a/views/item/index.jade
+++ b/views/item/index.jade
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   h2.display-data All Items
-    a.btn.btn-primary.pull-right(href="/items/create") Create a new Item
+    a.btn.btn-primary.pull-right(href="/new") Create a new Item
 
   table.table.table-bordered.table-striped(style="width:100%")
     tr
