--- a/views/item/detail.jade
+++ b/views/item/detail.jade
@@ -19,8 +19,8 @@ block content
 
 
   .form-actions
-    a.btn.btn-warning(href="/items") Back
+    a.btn.btn-warning(href="/item") Back
     | 
-    a.btn.btn-primary(href="/items/" + item._id + "/edit") Edit
+    a.btn.btn-primary(href="/item/" + item._id + "/edit") Edit
     | 
-    a.btn.btn-danger(href="/items/" + item._id + "/delete") Delete
+    a.btn.btn-danger(href="/item/" + item._id + "/delete") Delete
