--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype 5
 html
   head
-    title Generated with Bumm
+    title Verwurf
 
     meta(charset='UTF-8')
 
@@ -15,8 +15,8 @@ html
     .navbar.navbar-inverse.navbar-fixed-top
       .navbar-inner
         .container
-          a.brand(href="#") Generated with Bumm
-          ul.nav
+          a.brand(href="/") Verwurf
+          //ul.nav
             li
               a(href="#") Your navigation goes here
 
