--- a/views/item/upload.jade
+++ b/views/item/upload.jade
@@ -5,7 +5,7 @@ block content
 
   form#item-form.form-horizontal(action="/new", method="POST", enctype="multipart/form-data")
     fieldset
-      legend Create a new Item
+      legend Create a new Verwurf
     
       .control-group
         mixin label("name", "Name")        
@@ -13,15 +13,18 @@ block content
           mixin text("name", item.name)
           mixin errorMessage('item', 'name')
       .control-group
+        mixin label("reason", "Reason")        
+        .controls
+          mixin textarea("reason", item.reason)
+          mixin errorMessage('item', 'reason')
+      .control-group
         mixin label("file", "File")        
         .controls
           mixin date("file", item.file)
           mixin errorMessage('item', 'file')
-    .div(draggable="true")
-      p drag your files here
 
 
     .form-actions
-      a.btn.btn-warning(href="/items") Back
+      a.btn.btn-warning(href="/") Back
       | 
       input.btn.btn-primary(type="submit", value="Create")
